[project]
name = "read-image"
version = "1.0.0"
description = "MCP server to read image files and return them as viewable content"
readme = "README.md"
requires-python = ">=3.13"
license = "Unlicense"
license-files = ["LICENSE"]
authors = [{ name = "boecht" }]
keywords = ["llm-tools", "mcp", "image-processing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = ["mcp[cli]~=1.26"]

[project.urls]
repository = "https://github.com/boecht/read-image"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
